# hackathon-2-todo-phase-2

./: .gitignore  CLAUDE.md  CURRENT_TEST_STATUS.md  FEATURES.md  TESTING_ROADMAP.md  TESTS_CREATED_SUMMARY.md  pyproject.toml  tasks.json
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: ff71d53c1299_initial_schema.py
backend/src/: auth.py  config.py  database.py  main.py
backend/src/api/: health.py
backend/src/db/: session.py
backend/src/models/: __init__.py  tag.py  task.py  user.py
backend/tests/: conftest.py
frontend/: .env.example  README.md  auth.ts  middleware.ts  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: app-shell.tsx  navbar.tsx
frontend/hooks/: useAnalytics.ts  useRecurring.ts  useSubtasks.ts  useTasks.ts  useTemplates.ts
frontend/lib/: api.ts
specs/002-project-setup/: tasks.md
specs/003-database-setup/: tasks.md
specs/006-landing-page-ui/: tasks.md
src/: exceptions.py  main.py
src/cli/: app.py
src/models/: task.py
src/services/: interface.py  task_service.py  validators.py
src/storage/: interface.py  json_storage.py
tests/: conftest.py
tests/contract/: test_storage_contract.py
tests/integration/: test_add_workflow.py  test_view_workflow.py
tests/unit/: test_formatters.py  test_json_storage.py  test_task_model.py  test_task_service.py  test_validators.py
(+61 files in other folders)
